tests/baselines/reference/exportNamespace_js.errors.txt
b.js(1,1): error TS8006: 'export type' declarations can only be used in TypeScript files.
c.js(2,1): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.


==== a.js (0 errors) ====
    export class A {}
    
==== b.js (1 errors) ====
    export type * from './a';
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'export type' declarations can only be used in TypeScript files.
    
==== c.js (1 errors) ====
    import { A } from './b';
    A;
    ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 b.js:1:1: 'A' was exported here.
    